[package]
name = "llvm-cov-host"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.2"
actix-web = "4.4.0"
dotenvy = "0.15.7"
git2 = { version = "0.18.1", features = ["vendored-libgit2"] }
log = "0.4.20"
pretty_env_logger = "0.5.0"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
thiserror = "1.0.50"
regex = "1.10"
anyhow = "1.0.76"
sled = "0.34.7"
bincode = "1.3.3"
askama = "0.12.1"
chrono = { version = "0.4.31", features = ["serde"] }
